--- a/casaberriel-backend/src/main/resources/templates/detalle_reserva.html
+++ b/casaberriel-backend/src/main/resources/templates/detalle_reserva.html
@@ -1,67 +1,71 @@
-
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>	<!-- Head Start -->
+
+<head> <!-- Head Start -->
 	<th:block th:include="componentes/_head.html"></th:block>
 	<!-- Head End -->
 	<title data-i18n="banner.title"></title>
 </head>
 
 <body>
-<th:block th:include="componentes/_nav.html"></th:block>
+	<th:block th:include="componentes/_nav.html"></th:block>
 
 	<div class="container mt-5">
-	<div class="card">
-	<div class="card-header">
-		<h1 class="mb-4">Detalle de la Reserva</h1>
-		</div>
+		<div class="card">
+			<div class="card-header">
+				<h1 class="mb-4">Detalle de la Reserva</h1>
+			</div>
 			<div class="card-body" th:object="${reserva}">
-				
+
 				<p class="mb-1">
-									<strong>ID:</strong> <span th:text="${reserva.id}"></span>
-								</p>
-				<p class="mb-1">
-					<strong>NOMBRE:</strong> <span th:text="${reserva.nombre}"></span>
+					<strong data-i18n="form.id"></strong> <span th:text="${reserva.id}"></span>
 				</p>
 				<p class="mb-1">
-					<strong>Apellidos:</strong> <span th:text="${reserva.apellidos}"></span>
+					<strong data-i18n="form.name"></strong> <span th:text="${reserva.nombre}"></span>
 				</p>
 				<p class="mb-1">
-					<strong>eMAIL:</strong> <span th:text="${reserva.email}"></span>
-				</p>
-				<p class="mb-1">
-					<strong>dIRECCION:</strong> <span th:text="${reserva.direccion}"></span>
-				</p>
-				<p class="mb-1">
-					<strong>Fecha de Entrada:</strong> <span
-						th:text="${reserva.fechaEntrada}"></span>
-				</p>
-				<p class="mb-1">
-					<strong>Fecha de Salida:</strong> <span
-						th:text="${reserva.fechaSalida}"></span>
+					<strong data-i18n="form.surname"></strong> <span th:text="${reserva.apellidos}"></span>
 				</p>
 				<p class="mb-1">
 					<strong>Email:</strong> <span th:text="${reserva.email}"></span>
 				</p>
+				<p class="mb-1">
+					<strong data-i18n="form.address"></strong> <span th:text="${reserva.direccion}"></span>
+				</p>
+				<p class="mb-1">
+					<strong data-i18n="form.arrival"></strong> <span
+						th:text="${#dates.format(reserva.fechaEntrada, 'dd/MM/yyyy')}"></span>
+				</p>
+				<p class="mb-1">
+					<strong data-i18n="form.departure"></strong> <span
+						th:text="${#dates.format(reserva.fechaSalida, 'dd/MM/yyyy')}"></span>
+				</p>
+				<p class="mb-1">
+					<strong data-i18n="form.total_price"></strong> <span th:text="${reserva.precioTotal}"></span>
+				</p>
+				<p class="mb-1">
+					<strong>Observaciones</strong> <span th:text="${reserva.observaciones}"></span>
+				</p>
+				<p class="mb-1">
+					<strong>Numero personas</strong> <span th:text="${reserva.numPersonas}"></span>
+				</p>
 				<!-- Agrega más campos según sea necesario -->
 			</div>
 		</div>
-	<!-- Botón para el rol ADMIN -->
-	<a th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" 
-	   href="/admin/lista" 
-	   class="btn btn-primary mt-4">Volver</a>
+		<!-- Botón para el rol ADMIN -->
+		<a th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" href="/admin/lista"
+			class="btn btn-primary mt-4">Volver</a>
 
-	<!-- Botón para el rol USER -->
-	<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" 
-	   href="/reservas/miReserva" 
-	   class="btn btn-primary mt-4">Volver</a>
+		<!-- Botón para el rol USER -->
+		<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" href="/reservas/miReserva"
+			class="btn btn-primary mt-4">Volver</a>
 	</div>
-		</div>
-			</div>
-			</div>
-			<th:block th:include="componentes/_scripts.html"></th:block>
+	</div>
+	</div>
+	</div>
+	<th:block th:include="componentes/_scripts.html"></th:block>
 </body>
 
 <th:block th:include="componentes/footer.html"></th:block>
+
 </html>
