--- a/casaberriel-backend/src/main/resources/templates/registro.html
+++ b/casaberriel-backend/src/main/resources/templates/registro.html
@@ -41,18 +41,16 @@
 					<button type="submit" class="btn btn-success" data-i18n="common.registration"></button>
 				</form>
 			</div>
-		</div>
-		<div class="text-center mt-4">
-			<a href="/reservas/index" class="btn btn-primary mt-4" data-i18n="common.back"></a>
-		</div>
+			<div th:if="${param.exito}" class="alert alert-info d-flex justify-content-between align-items-center">
+				<span data-i18n="common.welcome"></span>
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
+					Iniciar Sesión
+				</button>
+			</div>
+		</div>>
 	</div>
 
-	<div th:if=${param.exito} class="alert alert-info" data-i18n="common.welcome">
-		<br>
-		<button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#loginModal">
-			Iniciar Sesión
-		</button>
-	</div>
+
 	<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
 	</div>
 	<input type="hidden" name="redirectUrl" th:value="${redirectUrl}">
