--- a/casaberriel-backend/src/main/resources/templates/admin.html
+++ b/casaberriel-backend/src/main/resources/templates/admin.html
@@ -121,8 +121,8 @@
 						</tr>
 					</tbody>
 				</table>
-				<div th:if="${message}" class="alert alert-success" role="alert">
-							<span th:text="${message}"></span>
+				<div th:if="${message1}" class="alert alert-success" role="alert">
+							<span th:text="${message1}"></span>
 						</div>
 			</div>
 		</div>
