Refactorización controllers y navegación

--- a/casaberriel-backend/src/main/resources/templates/admin.html
+++ b/casaberriel-backend/src/main/resources/templates/admin.html
@@ -128,7 +128,7 @@
 		</div>
 
 		<div class="text-center mt-4">
-			<a href="/reservas/index" class="btn btn-primary" data-i18n="common.exit"></a>
+			<a href="/home/index" class="btn btn-primary" data-i18n="common.exit"></a>
 		</div>
 	</div>
 
