--- a/casaberriel-backend/src/main/resources/templates/detalle_usuario.html
+++ b/casaberriel-backend/src/main/resources/templates/detalle_usuario.html
@@ -90,7 +90,7 @@
 				class="btn btn-primary mt-4" data-i18n="common.back"></a>
 
 			<!-- Botón para el rol USER -->
-			<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" href="/reservas/index"
+			<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" href="/home/index"
 				class="btn btn-primary mt-4" data-i18n="common.back"></a>
 		</div>
 	</div>
