--- a/casaberriel-backend/src/main/resources/templates/reservas.html
+++ b/casaberriel-backend/src/main/resources/templates/reservas.html
@@ -118,7 +118,7 @@
 							<div class="row justify-content-center">
 								<!-- Botón Volver -->
 								<div class="col-auto">
-									<a href="/reservas/miReserva" class="btn btn-primary" data-i18n="common.back"></a>
+									<a href="/home/index" class="btn btn-primary" data-i18n="common.back"></a>
 								</div>
 								<!-- Botón Enviar -->
 								<div class="col-auto">
