--- a/casaberriel-backend/src/main/resources/templates/miReserva.html
+++ b/casaberriel-backend/src/main/resources/templates/miReserva.html
@@ -82,7 +82,7 @@
 		<!-- Botón Volver -->
 		<div class="text-center mt-4">
 			<!-- Botón para el rol USER -->
-			<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" href="/reservas/index"
+			<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" href="/home/index"
 				class="btn btn-primary mt-4" data-i18n="common.back"></a>
 		</div>
 	</div>
