--- a/casaberriel-backend/src/main/resources/templates/componentes/_nav.html
+++ b/casaberriel-backend/src/main/resources/templates/componentes/_nav.html
@@ -62,6 +62,8 @@
 					<a class="nav-link" href="/home/index/#contact" data-i18n="navbar.contact"></a>
 				</li>
 
+			
+
 				<!-- Opción de Login si el usuario no está autenticado -->
 				<li th:if="${#httpServletRequest.remoteUser == null}" class="nav-item">
 					<button class="btn btn-outline-primary" data-toggle="modal" data-target="#loginModal"
@@ -72,7 +74,8 @@
 
 				<li class="nav-item">
 					<select id="languageSelector" class="form-control">
-						<option value="es"> Español</option>
+						<option value="">Idioma</option>
+						<option value="es">Español</option>
 						<option value="en">English</option>
 					</select>
 				</li>
@@ -129,7 +132,7 @@
 					<div class="modal-body" data-i18n="common.close_confirm"></div>
 					<div class="modal-footer">
 						<!-- Este botón debería cerrar el modal automáticamente -->
-						<button type="button" id="confirmLogoutBtn" class="btn btn-danger"
+						<button type="button" id="confirmLogoutBtn" class="btn btn-outline-danger"
 							data-i18n="common.close_session"></button>
 					</div>
 				</div>
@@ -155,4 +158,6 @@
 
 		}
 	});
+	
+
 </script>
