--- a/casaberriel-backend/src/main/resources/templates/registro.html
+++ b/casaberriel-backend/src/main/resources/templates/registro.html
@@ -1,4 +1,5 @@
-<!DOCTYPE xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<!-- Head Start -->
@@ -37,22 +38,23 @@
 					<div class="form-group">
 						<label for="password" data-i18n="form.password"></label> <input type="password" name="password"
 							class="form-control" id="password">
-					</div><br>
-					<button type="submit" class="btn btn-success" data-i18n="common.registration"></button>
+					</div>
+					<div class="text-center mt-4">
+						<button type="submit" class="btn btn-success" data-i18n="common.registration"></button>
+					</div>
 				</form>
+
 			</div>
+			<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
 			<div th:if="${param.exito}" class="alert alert-info d-flex justify-content-between align-items-center">
 				<span data-i18n="common.welcome"></span>
 				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
 					Iniciar Sesión
 				</button>
 			</div>
-		</div>>
+		</div>
 	</div>
 
-
-	<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
-	</div>
 	<input type="hidden" name="redirectUrl" th:value="${redirectUrl}">
 	<!-- Modal de Login -->
 	<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true"
