--- a/casaberriel-backend/src/main/resources/templates/error.html
+++ b/casaberriel-backend/src/main/resources/templates/error.html
@@ -1,5 +1,4 @@
 
-<!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
@@ -90,7 +89,7 @@
 	
     <!-- Barra de navegación -->
     <div class="navbar">
-		<h2><a class="navbar-brand" href="/reservas/index">CASA BERRIEL</a></h2>
+		<h2><a class="navbar-brand" href="/home/index">CASA BERRIEL</a></h2>
     </div>
 
     <!-- Contenido principal de error -->
@@ -99,8 +98,8 @@
         <p>Algo salió mal. El método de solicitud no es compatible con este endpoint.</p>
         <p class="error-details">Por favor, verifique la URL o contacte al soporte si el problema persiste.</p>
         
-        <a href="/reservas/index" class="btn">Volver al Inicio</a>
-        <a href="/reservas/index/#contact" class="btn">Contactar Soporte</a>
+        <a href="/home/index" class="btn">Volver al Inicio</a>
+        <a href="/home/index/#contact" class="btn">Contactar Soporte</a>
     </div>
 
     <!-- Pie de página -->
