--- a/casaberriel-backend/src/main/resources/templates/index.html
+++ b/casaberriel-backend/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
 		<section id="form" class="py-5">
 			<div class="container">
 				<h2 class="text-center mb-4" data-i18n="form.check_available"></h2>
-				<form id="comprobar-disponibilidad-form" th:action="@{/reservas/comprobar-disponibilidad}">
+				<form id="comprobar-disponibilidad-form" th:action="@{/home/comprobar-disponibilidad}">
 					<div class="row justify-content-center">
 						<div class="col-md-4">
 							<label class="d-inline-block" data-i18n="form.arrival"></label>
@@ -131,7 +131,7 @@
 						<p data-i18n="about.content"></p>
 					</div>
 					<div class="col-md-6">
-						<img src="images/bbq2.jpg" class="img-fluid rounded" alt="Casa Berriel">
+						<img src="/images/bbq2.jpg" class="img-fluid rounded" alt="Casa Berriel">
 					</div>
 				</div>
 			</div>
