--- a/casaberriel-backend/src/main/resources/templates/error.html
+++ b/casaberriel-backend/src/main/resources/templates/error.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
