ajustes idioma y urls

--- a/casaberriel-backend/src/main/resources/templates/reservas.html
+++ b/casaberriel-backend/src/main/resources/templates/reservas.html
@@ -31,8 +31,7 @@
 
 				<div class="col-md-4">
 					<div class="card">
-						<div class="card-header">
-							Fechas seleccionadas
+						<div class="card-header" data-i18n="form.dates_selected">
 						</div>
 						<div class="card-body" id="fechas-display">
 							<p data-i18n="form.title_booking"></p>
@@ -43,7 +42,7 @@
 							<p><strong data-i18n="form.price"></strong><span>80€</span></p>
 							<p><strong data-i18n="form.stay"></strong><span data-i18n="form.nights"></span></p>
 							<div class="text-center mt-4">
-								<a href="/reservas/index#form" class="btn btn-danger" data-i18n="form.modify_dates"></a>
+								<a href="/home/index#form" class="btn btn-danger" data-i18n="form.modify_dates"></a>
 							</div>
 
 
