--- a/casaberriel-backend/src/main/resources/templates/detalle_reserva.html
+++ b/casaberriel-backend/src/main/resources/templates/detalle_reserva.html
@@ -52,13 +52,15 @@
 				<!-- Agrega más campos según sea necesario -->
 			</div>
 		</div>
-		<!-- Botón para el rol ADMIN -->
-		<a th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" href="/admin/lista"
-			class="btn btn-primary mt-4">Volver</a>
+		<div class="text-center mt-4">
+			<!-- Botón para el rol ADMIN -->
+			<a th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" href="/admin/lista"
+				class="btn btn-primary mt-4">Volver</a>
 
-		<!-- Botón para el rol USER -->
-		<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" href="/reservas/miReserva"
-			class="btn btn-primary mt-4">Volver</a>
+			<!-- Botón para el rol USER -->
+			<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" href="/reservas/miReserva"
+				class="btn btn-primary mt-4">Volver</a>
+		</div>
 	</div>
 
 	<th:block th:include="componentes/_scripts.html"></th:block>
