--- a/casaberriel-backend/src/main/resources/templates/reservas.html
+++ b/casaberriel-backend/src/main/resources/templates/reservas.html
@@ -94,8 +94,8 @@
 								</div>
 
 
-								<input type="hidden" id="fechaEntrada" name="fechaEntrada" th:value="${fechaEntrada}">
-								<input type="hidden" id="fechaSalida" name="fechaSalida" th:value="${fechaSalida}">
+								<input type="hidden" id="fechaEntrada" name="fechaEntrada" th:value="${fechaEntrada}" required>
+								<input type="hidden" id="fechaSalida" name="fechaSalida" th:value="${fechaSalida}" required>
 								<div class="row">
 									<!-- Número de Personas -->
 									<div class="col-md-3 mb-3">
