Validaciones en formulario de registro de usuarios, telfono y contraseñas

--- a/casaberriel-backend/src/main/resources/templates/UsuarioConfirmacion.html
+++ b/casaberriel-backend/src/main/resources/templates/UsuarioConfirmacion.html
@@ -128,6 +128,7 @@
 				<p>Nombre: <span class="highlight" th:text="${nombreCliente}"></span></p>
 				<p>Apellidos: <span class="highlight" th:text="${apellidos}"></span></p>
 				<p>Dirección: <span class="highlight" th:text="${direccion}"></span></p>
+				<p>Teléfono: <span class="highlight" th:text="${telefono}"></span></p>
 				<p>Email: <span class="highlight" th:text="${email}"></span></p>
 				
 
