--- a/casaberriel-backend/src/main/resources/templates/newPassword.html
+++ b/casaberriel-backend/src/main/resources/templates/newPassword.html
@@ -61,18 +61,41 @@
 					<!-- Formulario de Restablecer Contraseña -->
 					<form th:action="@{/restablecer-password}" method="post">
 						<input type="hidden" name="token" th:value="${token}">
+				
 						<div class="form-group">
 							<label for="nuevaPassword">Nueva Contraseña</label>
-							<input type="password" id="nuevaPassword" name="nuevaPassword" class="form-control"
-								required>
+							<div class="input-group">
+								<input type="password" id="nuevaPassword" name="nuevaPassword" class="form-control"
+									required>
+								<span class="input-group-text" data-bs-toggle="tooltip" data-bs-placement="right"
+									title="La contraseña debe tener al menos 5 caracteres y no incluir caracteres especiales.">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+										class="bi bi-info-circle" viewBox="0 0 16 16">
+										<path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+										<path
+											d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
+									</svg> </span>
+							</div>
 						</div>
 						<div class="form-group">
 							<label for="confirmarPassword">Confirmar Contraseña</label>
-							<input type="password" id="confirmarPassword" name="confirmarPassword" class="form-control"
-								required>
+							<div class="input-group">
+
+								<input type="password" id="confirmarPassword" name="confirmarPassword"
+									class="form-control" required>
+								<span class="input-group-text" data-bs-toggle="tooltip" data-bs-placement="right"
+									title="La contraseña debe tener al menos 5 caracteres y no incluir caracteres especiales.">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+										class="bi bi-info-circle" viewBox="0 0 16 16">
+										<path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+										<path
+											d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
+									</svg> </span>
+							</div>
 						</div>
 						<button type="submit" class="btn btn-success">Restablecer Contraseña</button>
 					</form>
+					<div class="alert alert-danger" th:if="${errorPass}" th:text="${errorPass}"></div>
 				</div>
 			</div>
 		</div>
@@ -82,9 +105,16 @@
 	</main>
 	<th:block th:include="componentes/_scripts.html"></th:block>
 	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+			var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+			tooltipTriggerList.forEach(function (tooltipTriggerEl) {
+				new bootstrap.Tooltip(tooltipTriggerEl);
+			});
+		});
+
 		function closeForm() {
 			document.querySelector('.form-container').style.display = 'none';
-			window.location.href = "/reservas/index";
+			window.location.href = "/home/index";
 		}
 	</script>
 </body>
