--- a/casaberriel-backend/src/main/resources/templates/recuperarPassword.html
+++ b/casaberriel-backend/src/main/resources/templates/recuperarPassword.html
@@ -70,6 +70,8 @@
 				<div class="form-container">
 					<button class="close-btn" onclick="closeForm()">×</button>
 					<h3 class="text-center">Recuperar Contraseña</h3>
+					<div id="password-error" class="text-danger mt-2" style="display: none;"></div>
+
 					<p>Introduce tu correo electrónico para recuperar tu contraseña.</p>
 					<form th:action="@{/recuperar-password}" method="post">
 						<div class="form-group">
@@ -77,9 +79,13 @@
 							<input type="email" id="email" name="email" class="form-control" required>
 						</div>
 						<button type="submit" class="btn btn-success">Recuperar Contraseña</button>
+
 					</form>
+					<div class="alert alert-danger" th:if="${errorMail}" th:text="${errorMail}"></div>
+					
 				</div>
 			</div>
+			<div class="alert alert-danger" th:if="${errorToken}" th:text="${errorToken}"></div>
 		</div>
 	</header>
 	<main>
@@ -89,7 +95,7 @@
 	<script>
 		function closeForm() {
 			document.querySelector('.form-container').style.display = 'none';
-			window.location.href = "/reservas/index";
+			window.location.href = "/home/index";
 		}
 	</script>
 </body>
